Oc/Lab-31/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-web
  template:
    metadata:
      labels:
        app: static-web
    spec:
      containers:
      - name: static-web-container
        image: static-web:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
