Oc/Lab-31/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: static-web-svc
spec:
  selector:
    app: static-web
  ports:
  - port: 80
    targetPort: 80
