Oc/Lab-31/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: static-website-ingress
    namespace: default
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: static-website.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: static-web-svc
              port:
                number: 80
