Oc/Lab-31/net-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-same-namespace
    namespace: default
spec  :
    podSelector:
      matchLabels:
        app: static-web
    ingress:
    - from:
      - podSelector: {}
